2007-12-01  Dmitry Xmelkov  <dmix@gmail.ru>

	Move all CPP statements to '#ifndef __DOXYGEN__' scope to reduce
	the volume of garbage in documentation. IMHO, the \file doxygen
	directive is redundant here, as it forces an opening a new
	chapter with inclusion all CPP definitions.
	* libc/pmstring/memcpy_P.S: (Ditto.)
	* libc/pmstring/strcat_P.S: (Ditto.)
	* libc/pmstring/strcpy_P.S: (Ditto.)
	* libc/pmstring/strlen_P.S: (Ditto.)
	* libc/pmstring/strncat_P.S: (Ditto.)
	* libc/pmstring/strncmp_P.S: (Ditto.)
	* libc/pmstring/strncpy_P.S: (Ditto.)
	* libc/pmstring/strnlen_P.S: (Ditto.)
	* libc/stdlib/atoi.S: (Ditto.)
	* libc/stdlib/atol.S: (Ditto.)
	* libc/string/memccpy.S: (Ditto.)
	* libc/string/memchr.S: (Ditto.)
	* libc/string/memcmp.S: (Ditto.)
	* libc/string/memcpy.S: (Ditto.)
	* libc/string/memmove.S: (Ditto.)
	* libc/string/memset.S: (Ditto.)
	* libc/string/strcat.S: (Ditto.)
	* libc/string/strcpy.S: (Ditto.)
	* libc/string/strlen.S: (Ditto.)
	* libc/string/strncat.S: (Ditto.)
	* libc/string/strncmp.S: (Ditto.)
	* libc/string/strncpy.S: (Ditto.)
	* libc/string/strnlen.S: (Ditto.)
	* libc/string/strrchr.S: (Ditto.)

	Add new function lrint().
	* libm/fplib/lrint.S: New file.
	* libm/fplib/Files.am: Add new source lrint.S
	* include/math.h: Add lrint() function definition.
	* tests/simulate/math/lrint-01.c: New file.
	* NEWS: Update new functions list.

	Make conversion from float to (u)long in error cases to be
	more similar with GCC/x86.
	* libm/fplib/fixunssfsi.S: New file.
	* libm/fplib/Files.am: Add new source fixunssfsi.S
	* libm/fplib/fixsfsi.S: Rewrite to use __fixunssfsi() function.
	* libm/fplib/lround.S: Unify result in error cases.
	* include/math.h: lround(): fix comment about return value.
	* tests/simulate/fplib/flt2long-01.c: Update overflow test cases.
	* tests/simulate/fplib/flt2ulng-01.c: Ditto.
	* tests/simulate/math/lround-01.c: Ditto.
	* NEWS: Note about this change.

2007-11-30  Eric B. Weddington  <eric.weddington@atmel.com>
